<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".EditProyectActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="#D8D8D8"
		android:orientation="vertical"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="20dp"
			android:layout_marginTop="25dp"
			android:layout_marginEnd="20dp"
			android:orientation="horizontal">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginEnd="10dp"
				android:text="@string/id_EditProyect_txt"
				android:textColor="#000000"
				android:textSize="25sp" />

			<TextView
				android:id="@+id/textView_idProyecto_EditProyect"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="12"
				android:textColor="#000000"
				android:textSize="25sp" />
		</LinearLayout>

		<EditText
			android:id="@+id/editText_ProyectoNombre_editProyect"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="20dp"
			android:layout_marginTop="25dp"
			android:layout_marginEnd="20dp"
			android:layout_marginBottom="25dp"
			android:background="#FFFFFF"
			android:ems="10"
			android:hint="@string/nombre_del_proyecto_Title"
			android:importantForAutofill="no"
			android:inputType="text"
			android:textSize="25sp" />

		<EditText
			android:id="@+id/editText_ipInicial_editProyect"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="20dp"
			android:layout_marginTop="25dp"
			android:layout_marginEnd="20dp"
			android:layout_marginBottom="25dp"
			android:background="#FFFFFF"
			android:ems="10"
			android:hint="@string/ip_inicial_edit_proyect_txt"
			android:importantForAutofill="no"
			android:inputType="text"
			android:textSize="25sp" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="20dp"
			android:layout_marginTop="25dp"
			android:layout_marginEnd="20dp"
			android:layout_marginBottom="25dp"
			android:background="#FDFDFD"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/textView4"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/simbol_diagonal"
				android:textSize="36sp" />

			<EditText
				android:id="@+id/editText_Mascara_editProyect"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:ems="10"
				android:hint="@string/mascara_edit_proyect_txt"
				android:importantForAutofill="no"
				android:inputType="number"
				android:textSize="25sp" />
		</LinearLayout>

		<Button
			android:id="@+id/button_Guardar_editProyect"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="75dp"
			android:layout_marginTop="25dp"
			android:layout_marginEnd="75dp"
			android:layout_marginBottom="25dp"
			android:background="#43A047"
			android:text="@string/guardar_button_editProyect_txt"
			android:textColor="#000000"
			android:textSize="25sp" />

		<Button
			android:id="@+id/button_eliminarProyecto_editProyect"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="75dp"
			android:layout_marginTop="25dp"
			android:layout_marginEnd="75dp"
			android:layout_marginBottom="25dp"
			android:background="#FF2E2E"
			android:text="@string/eliminar_editProyectoBtn_txt"
			android:textColor="#000000"
			android:textSize="25sp" />
	</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>