<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#DFDFDF"
	tools:context=".RegisterActivity">

	<TextView
		android:id="@+id/textView2"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="1dp"
		android:text="@string/registrarse_title"
		android:textAlignment="center"
		android:textColor="#000000"
		android:textSize="50sp"
		app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<LinearLayout
		android:id="@+id/linearLayout2"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		app:layout_constraintBottom_toTopOf="@+id/guideline"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<EditText
			android:id="@+id/editText_Usuario_Register"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="50dp"
			android:layout_marginTop="25dp"
			android:layout_marginEnd="50dp"
			android:layout_marginBottom="25dp"
			android:background="#FFFFFF"
			android:ems="10"
			android:hint="@string/usuario_Login_Text"
			android:importantForAutofill="no"
			android:inputType="textPersonName"
			android:paddingStart="15dp"
			android:paddingEnd="15dp"
			android:textColor="#000000"
			android:textSize="25sp" />

		<EditText
			android:id="@+id/editText_Password_Register"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="50dp"
			android:layout_marginTop="25dp"
			android:layout_marginEnd="50dp"
			android:layout_marginBottom="25dp"
			android:background="#FFFFFF"
			android:ems="10"
			android:hint="@string/Password_Login_text"
			android:importantForAutofill="no"
			android:inputType="textPassword"
			android:paddingStart="10dp"
			android:paddingEnd="10dp"
			android:textColor="#000000"
			android:textSize="25sp" />

		<Button
			android:id="@+id/button_completar_Register"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="50dp"
			android:layout_marginTop="25dp"
			android:layout_marginEnd="50dp"
			android:layout_marginBottom="25dp"
			android:background="#1E88E5"
			android:text="@string/registrarse_Register_boton_txt"
			android:textColor="#000000"
			android:textSize="25sp" />

	</LinearLayout>

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.6" />
</androidx.constraintlayout.widget.ConstraintLayout>