<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<LinearLayout
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginBottom="15dp"
		android:background="#D8FDB1"
		android:orientation="vertical"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginTop="3dp"
			android:layout_marginBottom="3dp"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/textView_NombreNodo_ListItemNodo"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:background="#FFFFFF"
				android:ellipsize="marquee"
				android:marqueeRepeatLimit="marquee_forever"
				android:scrollHorizontally="true"
				android:singleLine="true"
				android:text="Nombre Nodo"
				android:textColor="#000000"
				android:textSize="25sp" />

			<ImageButton
				android:id="@+id/imageButton_editNodo"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_marginStart="20dp"
				android:layout_marginEnd="20dp"
				android:layout_weight="0"
				android:background="#BDBDBD"
				android:contentDescription="editNodo"
				app:srcCompat="@drawable/edit_nodo_icon" />

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="3dp"
			android:layout_marginBottom="3dp"
			android:orientation="horizontal">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="10dp"
				android:layout_marginEnd="10dp"
				android:layout_weight="1"
				android:background="#FFFFFF"
				android:ellipsize="marquee"
				android:marqueeRepeatLimit="marquee_forever"
				android:scrollHorizontally="true"
				android:singleLine="true"
				android:text="@string/cantidadNodos_ProyectView_txt"
				android:textColor="#000000"
				android:textSize="20sp" />

			<TextView
				android:id="@+id/textView_CantidadNodos_ListItemNodo"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="10dp"
				android:layout_marginEnd="10dp"
				android:layout_weight="1"
				android:background="#FFFFFF"
				android:ellipsize="marquee"
				android:marqueeRepeatLimit="marquee_forever"
				android:scrollHorizontally="true"
				android:singleLine="true"
				android:text="CantidadNodos"
				android:textColor="#000000"
				android:textSize="20sp" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="3dp"
			android:layout_marginBottom="3dp"
			android:orientation="horizontal">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="10dp"
				android:layout_marginEnd="10dp"
				android:layout_weight="1"
				android:background="#FFFFFF"
				android:ellipsize="marquee"
				android:marqueeRepeatLimit="marquee_forever"
				android:scrollHorizontally="true"
				android:singleLine="true"
				android:text="@string/ipinicial_ProyectView"
				android:textColor="#000000"
				android:textSize="20sp" />

			<TextView
				android:id="@+id/textView_IpInicial_ListItemNodo"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="10dp"
				android:layout_marginEnd="10dp"
				android:layout_weight="1"
				android:background="#FFFFFF"
				android:ellipsize="marquee"
				android:marqueeRepeatLimit="marquee_forever"
				android:scrollHorizontally="true"
				android:singleLine="true"
				android:text="IpInicial"
				android:textColor="#000000"
				android:textSize="20sp" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="3dp"
			android:layout_marginBottom="3dp"
			android:orientation="horizontal">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="10dp"
				android:layout_marginEnd="10dp"
				android:layout_weight="1"
				android:background="#FFFFFF"
				android:ellipsize="marquee"
				android:marqueeRepeatLimit="marquee_forever"
				android:scrollHorizontally="true"
				android:singleLine="true"
				android:text="@string/ip_final_ListItemNodo_txt"
				android:textColor="#000000"
				android:textSize="20sp" />

			<TextView
				android:id="@+id/textView_IpFinal_ListItemNodo"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="10dp"
				android:layout_marginEnd="10dp"
				android:layout_weight="1"
				android:background="#FFFFFF"
				android:ellipsize="marquee"
				android:marqueeRepeatLimit="marquee_forever"
				android:scrollHorizontally="true"
				android:singleLine="true"
				android:text="IpFinal"
				android:textColor="#000000"
				android:textSize="20sp" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="3dp"
			android:layout_marginBottom="3dp"
			android:orientation="horizontal">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="10dp"
				android:layout_marginEnd="10dp"
				android:layout_weight="1"
				android:background="#FFFFFF"
				android:ellipsize="marquee"
				android:marqueeRepeatLimit="marquee_forever"
				android:scrollHorizontally="true"
				android:singleLine="true"
				android:text="@string/mascara_edit_proyect_txt"
				android:textColor="#000000"
				android:textSize="20sp" />

			<TextView
				android:id="@+id/textView_Mascara_ListItemNodo"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="10dp"
				android:layout_marginEnd="10dp"
				android:layout_weight="1"
				android:background="#FFFFFF"
				android:ellipsize="marquee"
				android:marqueeRepeatLimit="marquee_forever"
				android:scrollHorizontally="true"
				android:singleLine="true"
				android:text="Mascara"
				android:textColor="#000000"
				android:textSize="20sp" />
		</LinearLayout>

	</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>